samples/_failures_safe/1761725294_10e4ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b33b742.c: In function ‘main’:
./samples/SAFE/__tmp_7b33b742.c:156:22: error: ‘EVENT’ undeclared (first use in this function)
  156 |         if (event == EVENT
      |                      ^~~~~
./samples/SAFE/__tmp_7b33b742.c:156:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7b33b742.c:156:27: error: expected ‘)’ at end of input
  156 |         if (event == EVENT
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_7b33b742.c:156:9: error: expected declaration or statement at end of input
  156 |         if (event == EVENT
      |         ^~
./samples/SAFE/__tmp_7b33b742.c:156:9: error: expected declaration or statement at end of input
